--- a/src/css/style.css
+++ b/src/css/style.css
@@ -266,10 +266,11 @@ margin: auto 0;
         background: linear-gradient(0deg, #A5A8BE, #A5A8BE)linear-gradient(0deg, #FFFFFF, #FFFFFF);
         border: 1px solid #A5A8BE;
         display: flex;
-        image{
-            margin: auto;
-            height: 77px;
-            width: 77px;
-        }
+  
+    }
+    .image-div img{
+        margin: auto;
+        height: 77px;
+        width: 77px;
     }
 }
